[gd_scene load_steps=9 format=3 uid="uid://bgtig5kfl2g4"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_k6doo"]
[ext_resource type="FontFile" uid="uid://bs0f53s1deni1" path="res://asset_packs/Shooting Star.ttf" id="2_3wlp0"]
[ext_resource type="AudioStream" uid="uid://ghyaxk6d7sqp" path="res://audio/182_Country_Village.mp3" id="2_22gnq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jt3na"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hpw8w"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8hetw"]
albedo_color = Color(0.415686, 0.752941, 0.760784, 1)

[sub_resource type="SphereMesh" id="SphereMesh_fv2sr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6k0y8"]

[node name="Player" type="CharacterBody3D"]
collision_mask = 2
script = ExtResource("1_k6doo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_jt3na")

[node name="PlayerBody" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_hpw8w")
surface_material_override/0 = SubResource("StandardMaterial3D_8hetw")

[node name="Eye1" type="MeshInstance3D" parent="PlayerBody"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.18, 0.5, -0.5)
mesh = SubResource("SphereMesh_fv2sr")

[node name="Eye2" type="MeshInstance3D" parent="PlayerBody"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.18, 0.5, -0.5)
mesh = SubResource("SphereMesh_fv2sr")

[node name="CameraOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6651, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraOrigin"]
collision_mask = 2
spring_length = 3.0
margin = 1.0

[node name="Camera3D" type="Camera3D" parent="CameraOrigin/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.134082, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="UI"]
offset_left = 515.0
offset_top = 493.0
offset_right = 875.0
offset_bottom = 558.0

[node name="InteractText" type="Label" parent="UI/BoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.768627, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3wlp0")
theme_override_font_sizes/font_size = 40
text = "Press E to interact"

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="Strings" type="VBoxContainer" parent="UI/HBoxContainer"]
layout_mode = 2

[node name="Money" type="Label" parent="UI/HBoxContainer/Strings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3wlp0")
theme_override_font_sizes/font_size = 30
text = "Money:"

[node name="Food" type="Label" parent="UI/HBoxContainer/Strings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3wlp0")
theme_override_font_sizes/font_size = 30
text = "Food:"

[node name="Values" type="VBoxContainer" parent="UI/HBoxContainer"]
layout_mode = 2

[node name="Money2" type="Label" parent="UI/HBoxContainer/Values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3wlp0")
theme_override_font_sizes/font_size = 30

[node name="Food2" type="Label" parent="UI/HBoxContainer/Values"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3wlp0")
theme_override_font_sizes/font_size = 30

[node name="music" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
stream = ExtResource("2_22gnq")
autoplay = true

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 6
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, -0.8)
shape = SubResource("BoxShape3D_6k0y8")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
